Update Postest 1 rifaldi027.html

--- a/Postest 1 rifaldi027.html
+++ b/Postest 1 rifaldi027.html
@@ -98,7 +98,7 @@
         <p>2109106027</p>
         <p>00992883910</p>
         <p>
-          <a href="https://classroom.google.com/u/0/c/NTI3MzE4NTY4MDk0">Posttest 1 Web</a>
+          <a href="https://github.com/rifaldi0927/rifaldi0927.github.io/blob/main/Postest%201%20rifaldi027.html">Posttest 1 Web</a>
         </p>
       </td>
     </tr>
